# mastp_solver_paper

./: CMakeLists.txt  README.md
cmake/modules/: FindCPLEX.cmake  FindGUROBI.cmake
data/instances/MASTP-RAND/: s1n12.in  s1n15.in  s1n18.in  s1n6.in  s1n9.in  s2n12.in  s2n15.in  s2n18.in  s2n6.in  s2n9.in  s3n12.in  s3n15.in  s3n18.in  s3n6.in  s3n9.in  s4n12.in  s4n15.in  s4n18.in  s4n6.in  s4n9.in  s5n12.in  s5n15.in  s5n18.in  s5n6.in  s5n9.in
data/instances/MASTP-TSP/: berlin52.tsp.10.in  berlin52.tsp.12.in  berlin52.tsp.20.in  berlin52.tsp.25.in  eil51.tsp.10.in  eil51.tsp.12.in  eil51.tsp.20.in  eil51.tsp.25.in  eil76.tsp.10.in  eil76.tsp.12.in  eil76.tsp.20.in  eil76.tsp.25.in  pr76.tsp.10.in  pr76.tsp.12.in  pr76.tsp.20.in  pr76.tsp.25.in  st70.tsp.10.in  st70.tsp.12.in  st70.tsp.20.in  st70.tsp.25.in
src/: Arrangement.cpp  Arrangement.h  Benders.cpp  Benders.h  DisjointSetForest.cpp  DisjointSetForest.h  Instance.h  SEC.cpp  SEC.h  Solver.cpp  Solver.h  Timer.cpp  Timer.h  main.cpp  random_instance.py
